--- a/Wrangling_filter_select.Rmd
+++ b/Wrangling_filter_select.Rmd
@@ -214,8 +214,11 @@ There were 1248 movies released in 1995.
 2. Which Comedies with an MPAA rating, over 120 minutes have a rating above 8?
 
 ```{r}
-
+movies %>%
+  filter(Comedy == 1, rating > 8, length > 120,mpaa>0) %>%
+  select(title, rating, length,mpaa)
 ```
+After running the above code I foound out that there is 4 movies under those categories.
 
 3. Create a subset of only Harry Potter movies with the title, rating, budget, and votes. Which movies are included in this data? Which is highest rated? Which has the most votes on imdb.com?
 
