--- a/Wrangling_filter_select.Rmd
+++ b/Wrangling_filter_select.Rmd
@@ -223,8 +223,12 @@ After running the above code I foound out that there is 4 movies under those cat
 3. Create a subset of only Harry Potter movies with the title, rating, budget, and votes. Which movies are included in this data? Which is highest rated? Which has the most votes on imdb.com?
 
 ```{r}
-
+movies %>%
+  filter(str_detect(title, "Harry Potter")) %>%
+  select(title, rating, budget, votes)
 ```
+After running the code above I found that there are 3 harry potter movies (Harry Potter and the Chamber of Secrets	, Harry Potter and the Prisoner of Azkaban,	
+Harry Potter and the Sorcerer's Stone). The movie with the highest rating was Harry Potter and the Prisoner of Azkaban, the movie with the highest votes was Harry Potter and the Sorcerer's Stone with 46741 votes 
 
 4. What is the highest budget for a movie that is an Animation or Comedy with at least 100 votes?
 
